--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -5,7 +5,9 @@
         "text": "Olá, sou o Felipe Destro, engenheiro de software brasileiro e atualmente cursando o sexto semestre de Bacharelado em Ciência da Computação. Minha jornada na programação começou em 2020, quando, ao desenvolver meu primeiro TCC utilizando JavaScript, percebi a força transformadora da tecnologia. Na época, também fui programador na equipe de robótica da FRC (First Robotics Competition), o que reforçou ainda mais minha paixão pela área. Com o tempo, me especializei em front-end, onde encontro satisfação em criar experiências interativas e intuitivas."
     },
     "hero": {
-        "text": "Eu sou um entusiasta da programação, aprendendo a construir aplicações web robustas e responsíveis. Desenvolvendo desde 2020, venho aperfeiçoando minhas habilidades com front-end e suas tecnologias como React, Next.js e TypeScript, bem como tecnologias de back-end e banco de dados, como Node.js e MySQL. Meu objetivo é aproveitar minha experiência para criar soluções inovadoras que impulsionem o crescimento dos negócios e proporcionem experiências excepcionais ao usuário."
+        "text": "Eu sou um entusiasta da programação, aprendendo a construir aplicações web robustas e responsíveis. Desenvolvendo desde 2020, venho aperfeiçoando minhas habilidades com front-end e suas tecnologias como React, Next.js e TypeScript, bem como tecnologias de back-end e banco de dados, como Node.js e MySQL. Meu objetivo é aproveitar minha experiência para criar soluções inovadoras que impulsionem o crescimento dos negócios e proporcionem experiências excepcionais ao usuário.",
+        "button1": "Download Resume",
+        "button2": "Projects"
     },
     "projects": {
         "title": "Projetos",
