--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,6 +15,7 @@
         "descIgnite": "Interactive social media feed simulator that allows users to comment, like, and remove comments, offering a seamless and delightful user journey.",
         "descPortfolio": "A personal portfolio website that showcases projects, skills, and contact information, ideal for highlighting competencies and facilitating professional connections.",
         "descWf": "A web application hosting mini-games such as chess, puzzles, tic-tac-toe, and a whiteboard, providing an interactive digital platform for users to enjoy.",
+        "descWt": "This project is a simple web application developed in Angular that allows users to check the weather conditions of any city in the world in real time, using the OpenWeatherMap API.",
         "textWf": "In Development",
         "button": "See More"
     },
